# AAMM_miniml

./: LICENSE  README.md  pyproject.toml
src/: .gitignore
src/AAMM_miniml/: _BaseClasses.py
src/AAMM_miniml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/AAMM_miniml/_helpers/: __init__.py
src/AAMM_miniml/_testing/: benchmark.ipynb  test_KNNClassifier.ipynb  test_KNNRegressor.ipynb  test_SLP.ipynb  test_adaboost.ipynb  test_decomposition.ipynb  test_ensemble.ipynb  test_feature_extraction.ipynb  test_feature_selection.ipynb  test_impute.ipynb  test_linear_model.ipynb  test_metrics.ipynb  test_model_selection.ipynb  test_naive_bayes.ipynb  test_neural_network.ipynb  test_neural_network_BP.ipynb  test_preprocessing.ipynb  test_stacking.ipynb  test_svm.ipynb  test_tree.ipynb
src/AAMM_miniml/datasets/: __init__.py  adnane.csv  mahmoud.csv
src/AAMM_miniml/decomposition/: LDA.py  PCA.py  TSNE.py
src/AAMM_miniml/ensemble/: AdaBoost.py  BaggingClassifier.py  BaggingRegressor.py  GradientBoosting.py  ParallelRandomForestClassifier.py  ParallelRandomForestRegressor.py  RandomForestClassifier.py  RandomForestRegressor.py  Stacking.py  VotingClassifier.py  VotingRegressor.py
src/AAMM_miniml/feature_extraction/: CountVectorizer.py
src/AAMM_miniml/feature_selection/: SelectKBest.py  VarianceThreshold.py
src/AAMM_miniml/impute/: KNNImputer.py  SimpleImputer.py
src/AAMM_miniml/linear_model/: LinearRegression.py  LogisticRegression.py
src/AAMM_miniml/metrics/: __init__.py
src/AAMM_miniml/model_selection/: GridSearchCV.py  KFold.py  StratifiedKFold.py  (+2 more)
(+24 files in other folders)
